fix nav collaps

--- a/src/App.css
+++ b/src/App.css
@@ -39,3 +39,8 @@
   position: absolute !important;
   z-index: 1050;
 }
+
+.mini-img {
+  width: 15px;
+  height: 15px;
+}
